--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "prisma": "^5.6.0"
+    "nodemon": "^3.0.1",
+    "prisma": "^5.6.0",
+    "slugify": "^1.6.6"
   }
 }
